--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,10 @@
-baseurl: "/zolan" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
+# Site settings
+title: "Mauro Junior - Portfolio"
+description: "Portfolio profissional de Mauro Junior - Desenvolvedor, Animador e Motion Designer"
+language: "pt-BR"
 
 # Build settings
 markdown: kramdown
@@ -10,9 +14,8 @@ plugins:
   - jekyll-sitemap
   - jekyll/tagging
 
-paginate: 5
+paginate: 6
 paginate_path: "/page/:num"
-
 
 # Pages Path
 defaults:
@@ -23,12 +26,6 @@ defaults:
 
 include:
   - _pages
-
-
-# Tags
-tag_page_dir:         tag
-tag_page_layout:      tag_page
-tag_permalink_style:  pretty
 
 sass:
   sass_dir: _sass
