--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,48 +1,32 @@
 #-------------------------------
 # General Site Settings
-title: Zolan
-logo: logo.svg # You can add own logo.
-description: Zolan is modern minimal theme for Jekyll
-
+title: Mauro Junior Portfolio
+logo: logo.svg # You can add own logo
+description: Portfolio profissional de Mauro Junior - Desenvolvedor, Animador e Motion Designer
 
 #-------------------------------
 # Author Settings
 author:
-  name: Alex Rodriguez
-  image: 01.jpg
-  say-hello: Hello, I’m <strong>Alex Rodriguez</strong>
-  bio: Designs, talks, and writes about <strong>web</strong>, <strong>ethics</strong>, <strong>privacy</strong>, and dev. I share design tutorials, free resources and inspiration. Loves <a href="#">music</a> & riding his bicycle.
-
+  name: Mauro Junior
+  image: profile.jpg # Update this with your profile image
+  say-hello: Olá, sou <strong>Mauro Junior</strong>
+  bio: Desenvolvedor, Animador e Motion Designer criando experiências digitais únicas e memoráveis. Especializado em <strong>desenvolvimento web</strong>, <strong>animação</strong> e <strong>motion design</strong>.
 
 #-------------------------------
 # Contact links
-twitter: https://twitter.com/ # Add your Twitter handle
-facebook: https://facebook.com/ # Add your Facebook handle
-dribbble: https://dribbble.com/ # Add your Dribbble handle
-instagram: https://instagram.com/ # Add your Instagram handle
-pinterest: https://pinterest.com/ # Add your Pinterest handle
-
+github: https://github.com/Mauroetc # Add your GitHub handle
+linkedin: # Add your LinkedIn handle
+behance: # Add your Behance handle
+vimeo: # Add your Vimeo handle
+instagram: # Add your Instagram handle
 
 #-------------------------------
 # Comment Section (Disqus)
-disqus-identifier: mr-brown # add your shortname for Disqus Comment. For example mr-brown
-
-
-#-------------------------------
-# Instagram Feed
-instafeed: # To enable the instafeed, use the value true. To turn off use the value false.
-instagram-profile: artemsheludko_ # Add instagram username
-
+disqus-identifier: # Not needed for portfolio
 
 #-------------------------------
 # Google Analytics
-google-analytics: # Add your identifier. For example UA-99631805-1.
-
-
-#-------------------------------
-# Newsletter
-mailchimp: # Add your MailChimp form identifier. For example - blogenjoyfreedom.us16.list-manage.com/subscribe/post?u=cd56155d76ddeeb4c0bc4d080&amp;id=7a526cd13e
-
+google-analytics: # Add your identifier
 
 #-------------------------------
 # Navigation Menu
